--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/COMP603-Project-2
 endorsed.classpath=
 excludes=
+file.reference.derby.jar=lib\\derby.jar
+file.reference.derbyclient.jar=lib\\derbyclient.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.derby.jar}:\
+    ${file.reference.derbyclient.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
